Fixes bottom button spacing issue in modals

--- a/packages/ui-shared/src/theme/components/dialog/_dialog.scss
+++ b/packages/ui-shared/src/theme/components/dialog/_dialog.scss
@@ -140,7 +140,7 @@ $dialog-padding: $pt-grid-size * 2 !default;
   display: flex;
   justify-content: flex-end;
 
-  .#{$ns}-button {
+  .btn {
     margin-left: $pt-grid-size;
   }
 }
